--- a/html/index2.html
+++ b/html/index2.html
@@ -7,14 +7,13 @@
   </head>
   <body>
     <form action="/data" method="get">
-      <h3>Save Text</h3>
-      <label for="tit">Title : </label>
+      <h3>메모장</h3>
+      <label for="tit">제목 : </label>
       <input type="text" id="'tit" name="title" /><br />
-      <label for="con">Content : </label>
+      <label for="con">내용 : </label>
       <textarea id="con" name="content"></textarea><br />
       <div>
-        <input type="submit" value="Submit" />
-        <button type="button" onclick="location.href='/list'">Save List</button>
+        <input type="submit" value="저장하기" />
       </div>
     </form>
   </body>
