--- a/web2/index.html
+++ b/web2/index.html
@@ -23,7 +23,7 @@
         margin-bottom: 5px;
       }
       .email {
-        margin-left: 34px;
+        margin-left: 32px;
         margin-bottom: 5px;
       }
       button {
@@ -56,10 +56,11 @@
       /><br />
       <label for="name">Name </label>
       <input class="name" type="text" id="Name" name="Name" /><br />
-      <label for="name">Email </label>
+      <label for="name">E-mail </label>
       <input class="email" type="text" id="email" name="email" /><br />
       <button type="submit">Join</button>
       <button type="reset">Reset</button>
+      <button type="button" onclick="location.href='/list'">List</button>
     </form>
   </body>
 </html>
