--- a/RESTful/session/index.html
+++ b/RESTful/session/index.html
@@ -4,9 +4,26 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <style>
+      fieldset {
+        background-color: rgba(213, 212, 212, 0.89);
+      }
+      button {
+        margin-bottom: 0px;
+        width: 150px;
+        height: 40px;
+        font-size: 20px;
+        font: bold;
+        background-color: beige;
+        border: 1px solid black;
+        border-radius: 5px;
+      }
+    </style>
   </head>
   <body>
-    <h1>대충 홈페이지</h1>
-    <button onclick="location.href='/login'">로그인하기</button>
+    <fieldset>
+      <legend><h1>대충 홈페이지</h1></legend>
+      <button onclick="location.href='/login'">로그인하기</button>
+    </fieldset>
   </body>
 </html>
