--- a/문제풀이1차/20240722/login.html
+++ b/문제풀이1차/20240722/login.html
@@ -65,7 +65,7 @@
   <body>
     <div class="login-container">
       <h2>로그인</h2>
-      <form action="/login" method="post">
+      <form action="/" method="post">
         <input
           type="text"
           id="username"
